k8s/grav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-grav-service
spec:
  type: ClusterIP
  selector:
    app: k8s-grav
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
