k8s/grav-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-grav-ingress
  annotations:
      kubernetes.io/ingress.class: nginx
      kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: your-domain-name-here.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-grav-service
          servicePort: 80
  tls:
  - secretName: your-domain-name-here-tls
    hosts:
    - your-domain-name-here.com
